# RAG-refine

./: .gitignore  PROJECT_OVERVIEW.md  README.md  ROOT_SCRIPTS.md  backend.Dockerfile  docker-compose.yml  dockerfile  frontend.Dockerfile  pyproject.toml
backend/: main.py  main_test.py  pyproject.toml
evaluation/: EVALUATION_FRAMEWORK.md
evaluation/simcse/: SIMCSE_MODULE_DOCUMENTATION.md
frontend/: app.py  pyproject.toml
hypergraphrag/: MODULE_DOCUMENTATION.md  prompt.py
hypergraphrag/kg/: KG_MODULE_DOCUMENTATION.md
src/: langmodel.py  main.py
