[tool.poetry]
name = "ollama_test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.pysen]
version = "0.11"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py312"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
  excludes = [".venv/"]

[tool.pysen.lint.source]
  includes = ["."]
  excludes = [".venv/"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "1.57.1"
httpx = "0.28.0"
langgraph = "^0.2.57"
langchain-openai = "^0.2.12"
langchain-core = "^0.3.23"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pysen = "^0.11.0"
mypy = "^1.13.0"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
